src/pages/components/Cards/Card.css
.card {
  width: 280px;
  height: 12.5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 3px solid #0b53b8;
  border-radius: 1rem;
  cursor: pointer;
  transition: transform 0.2s, background-color 0.3s;
  color: #717171;
}

.card:hover {
  background-color: #0b53b8;
  color: white;
  transform: scale(1.05);
}

.card-icon {
  color: #0b53b8;
}

.card:hover .card-icon {
  color: white;
}

.card p {
  margin-top: 12px;
  font-size: 1.25rem;
}

@media (max-width: 1200px) {
  .card {
    width: 240px; 
    height: 11rem;
  }
}

@media (max-width: 768px) {
  .card {
    width: 180px;
    height: 9rem;
  }

  .card-icon {
    height: 4rem;
  }
}

@media (max-width: 480px) {
  .main-content {
    padding: 3rem 1rem;
  }

  .card {
    width: 160px;
    height: 8rem;
  }

  .card-icon {
    font-size: 1rem; 
  }

  .card p {
    font-size: 0.875rem;
  }
}

